# ros2_communication_monitor

./: .gitignore  .~lock.ros2_dashboard_final.pptx#  AGENTS.md  AGENTS_ohs.md  README.md  config.md  error.txt  ros2_dashboard.txt  ros2_dashboard_final.pptx
backend/: requirements.txt
backend/config/: interface_apply_status.yaml  interface_packages.yaml  interface_registry.yaml  monitor.yaml
backend/demo_nodes/: demo_can_control_server.py  demo_cleaning_schedule.py  demo_interface_imports.py  demo_malang.py  demo_robot_control_service.py  demo_schedule_crud_service.py
backend/src/can_interfaces/: CMakeLists.txt  package.xml
backend/src/ros2_dashboard_backend/: package.xml  setup.cfg  setup.py
backend/src/ros2_dashboard_interfaces/: CMakeLists.txt  package.xml
backend/src/uploaded_interface_packages/rths_interfaces/: CMakeLists.txt  package.xml
backend/src/uploaded_interface_packages/rths_interfaces/action/: CanControl.action
backend/src/uploaded_interface_packages/rths_interfaces/srv/: RobotControl.srv  ScheduleCrud.srv
backend/src/uploaded_interfaces/: CMakeLists.txt  package.xml
backend/src/uploaded_interfaces/msg/: Malang.msg
docs/: 00_project_big_picture.md  01_core_concepts.md  01_environment_setup.md  02_backend_flow.md  02_backend_flow_line_by_line.md  03_topic_flow.md  04_service_flow.md  05_action_flow.md  06_node_flow.md  07_alert_flow.md  07_frontend_flow.md  08_api_field_mapping.md  08_websocket_flow.md  09_frontend_flow.md  09_how_to_debug.md  10_my_explanation_script.md  10_visualization_flow.md  11_code_trace_index.md  12_interface_lab_flow.md  DOCS_UPDATE_HANDOFF.md  action_monitor_flow.md  ros2_dashboard
docs/docs2/: 01_core_concepts.md  02_backend_flow.md  02_backend_flow_line_by_line.md  03_topic_flow.md  04_service_flow.md  05_action_flow.md  08_websocket_flow.md  09_frontend_flow.md  11_code_trace_index.md  ros2_dashboard
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: rosApi.js
scripts/: run_dashboard_stack.sh
(+146 files in other folders)
