<?xml version="1.0"?>
<package format="3">
  <name>uploaded_interfaces</name>
  <version>0.0.0</version>
  <description>User-authored interfaces from ros2_dashboard.</description>
  <maintainer email="user@example.com">ros2_dashboard</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

</package>
